--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/words.js"></script>
     <script src="./js/index.js"></script>
     <title>TypingApp</title>
 </head>
