move typing game and add hello_world_anime.

--- a/typing_game/index.html
+++ b/typing_game/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/words.js"></script>
-    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <script src="./words.js"></script>
+    <script src="./index.js"></script>
     <title>TypingApp</title>
 </head>
 
